# personal_portfolio

./: EMAIL_SETUP.md  README.md  filter.txt  index.html  package-lock.json  package.json  server.js  tailwind.config.ts  tsconfig.json  vite-plugin-viton-api.js  vite.config.ts
src/: App.tsx  index.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/api/: email-service.js  viton-spawner.js
src/components/: AboutSection.tsx  ContactSection.tsx  CursorSwitcher.tsx  Footer.tsx  HeroSection.tsx  Navigation.tsx  NeonCursorBackground.tsx  PlaygroundSection.tsx  PortalTransition.tsx  ProjectExplorer3D.tsx  ProjectLaunchTransition.tsx  ProjectLauncher.tsx  ProjectsSection.tsx  SnakeTrail.tsx  SnakeTrailToggle.tsx  TauriStatus.tsx  WormholeExact.tsx  WormholeSplash.tsx  YggdrasilTree.tsx  index.js  wormhole-exact-impl.ts
src/components/easter-egg/: EasterEggStar.tsx  FairyModel.tsx  FairySequence.tsx  FairySequence3D.tsx
src/data/: projectData.ts
src/fx/: text-fx.css  text-fx.ts
src/hooks/: useScrollReveal.ts
src/lib/: logger.ts  threeRuntime.ts
src/lib/three/: index.ts
src/pages/: Index.tsx
