[package]
name = "shivaay-portfolio"
version = "1.0.0"
description = "Shivaay's Personal Portfolio with Project Launcher"
authors = ["Shivaay Dhondiyal"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-shell = "2.0"

[features]
# this feature is used used for production builds where `devUrl` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
